button Acheter fixed (align-self:center & width:70% for .cardÃ-btn in show-tickets.css)

--- a/src/pages/search/show-tickets.css
+++ b/src/pages/search/show-tickets.css
@@ -48,7 +48,9 @@
 .card-btn {
     text-align: center;
     background-color: lightsalmon;
-    width: 80%;
+    width: 70%;
+    align-content: center;
+    align-self: center;
     border: none;
     border-radius: 5px;
     padding: 0.5rem 1rem;
